# btleplug

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  azure-pipelines.yml  build.rs  test
.devcontainer/: Dockerfile
.github/: blank.md  bug_report.md
.github/ISSUE_TEMPLATE/: bug_report.md  features.md
.github/workflows/: rust.yml
examples/: Info.plist  bandbridge.rs  discover_adapters_peripherals.rs  event_driven_discovery.rs  hashing.rs  lights.rs  subscribe_characteristics.rs  subscribe_notify_characteristic.rs  subscribe_onnotify_characteristic.rs
src/: adapter.rs  constants.rs  device.rs  framework.rs  gatt.rs  lib.rs  main.rs  platform.rs  serde.rs
src/adapter/: acl_stream.rs  mod.rs  parser.rs  protocol.rs  scan.rs
src/api/: adapter_manager.rs  bdaddr.rs  bleuuid.rs  host.rs  mod.rs  peripheral.rs  uuid.rs
src/api/async_api/: mod.rs
src/bluez/: adapter.rs  constants.rs  manager.rs  mod.rs  peripheral.rs
src/bluez/adapter/: acl_stream.rs  dbus.rs  mod.rs  peripheral.rs
src/bluez/bluez_dbus/: .gitignore  adapter.rs  bluez-dbus-introspect-adapter.xml  bluez-dbus-introspect-device.xml  bluez-dbus-introspect-gatt-characteristic.xml  bluez-dbus-introspect-gatt-descriptor.xml  bluez-dbus-introspect-gatt-service.xml  bluez-dbus-introspect-manager.xml  dbus-introspect-adapter.xml  dbus-introspect-device.xml  device.rs  gatt_characteristic.rs  gatt_descriptor.rs  gatt_service.rs  manager.rs  mod.rs  regenerate.sh
src/bluez/dbus_introspect/: regenerate.sh
src/bluez/manager/: dbus.rs  mod.rs
src/bluez/protocol/: att.rs  hci.rs  mod.rs
src/bluez/util/: mod.rs
src/bluez_async/: adapter.rs  manager.rs  peripheral.rs
src/common/: adapter_manager.rs  mod.rs  util.rs
src/corebluetooth/: .travis.yml  adapter.rs  central_delegate.rs  delegate.rs  device.rs  discovery_session.rs  ffi.rs  framework.rs  future.rs  gatt_characteristic.rs  gatt_descriptor.rs  gatt_service.rs  internal.rs  internal_delegate.rs  lib.rs  manager.rs  mod.rs  peripheral.rs  utils.rs
src/corebluetooth/async_api/: adapter.rs  manager.rs  peripheral.rs
src/corebluetooth/ble/: adapter.rs  delegate.rs  device.rs  discovery_session.rs  framework.rs  gatt_characteristic.rs  gatt_descriptor.rs  gatt_service.rs  mod.rs  utils.rs
src/corebluetooth/src/: utils.rs
src/corebluetooth/utils/: core_bluetooth.rs  mod.rs  nsstring.rs
src/device/: mod.rs
src/droidplug/: adapter.rs  manager.rs  mod.rs  peripheral.rs
src/droidplug/java/: .gitignore  build.gradle  settings.gradle
src/droidplug/java/src/main/: AndroidManifest.xml
src/droidplug/java/src/main/java/com/nonpolynomial/btleplug/android/impl/: Adapter.java  BluetoothException.java  NoSuchCharacteristicException.java  NotConnectedException.java  Peripheral.java  PermissionDeniedException.java  ScanFilter.java  UnexpectedCallbackException.java  UnexpectedCharacteristicException.java
src/droidplug/jni/: mod.rs  objects.rs
src/manager/: mod.rs
src/protocol/: att.rs  hci.rs  mod.rs
src/util/: mod.rs
src/wasm/: adapter.rs  manager.rs  mod.rs  peripheral.rs  utils.rs
src/winrtble/: adapter.rs  bindings.rs  manager.rs  mod.rs  peripheral.rs  utils.rs
src/winrtble/ble/: characteristic.rs  descriptor.rs  device.rs  mod.rs  service.rs  watcher.rs
